src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Recipient_Address__c</fullName>
        <formula>Recipient_Contact__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Recipient_Indicator__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Recipient Contact)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_Type__c</fullName>
        <formula>Recipient_Contact__r.Address__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Delivery_Charge__c</fullName>
        <label>Recurring Delivery Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Inc_Del_Charge__c</fullName>
        <description>Total Recurring Charge Inc Delivery &amp; Postage Charges</description>
        <formula>IF(ISBLANK(TEXT(Billing_Type__c)) || ISPICKVAL(Billing_Type__c, &quot;Full Prepaid&quot;), 0, 	Total_Monthly_Recurring_Charge__c + Recurring_Delivery_Charge__c + Total_Monthly_Postage_Charge__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Recurring Charge Inc D&amp;P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks_Check__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <label>Renewal Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Source__c</fullName>
        <label>Request Source</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eshop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_for_Waiving_of_Admin_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request for Waiving of Admin Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOA_Suppression_Indicator__c</fullName>
        <label>SOA Suppression Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPH_Staff_Indicator__c</fullName>
        <description>ARMS field</description>
        <label>ARMS SPH Staff Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_Retention__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to route the Case to Retention Team</description>
        <label>Send to Retention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Vendor Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Request_Date__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>Stop Subscription</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Subscriber Account)</relationshipLabel>
        <relationshipName>Orders1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscriber_Charge__c</fullName>
        <label>Subscriber Charge</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Rate__c</fullName>
        <label>Subscription Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND NOT 5) OR (1 AND 2 AND 3 AND 4 AND 5)</booleanFilter>
            <filterItems>
                <field>Zuora__Subscription__c.Subscription_Type_1__c</field>
                <operation>equals</operation>
                <value>Publication</value>
            </filterItems>
            <filterItems>
                <field>Zuora__Subscription__c.Zuora__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Zuora__Subscription__c.Zuora__Status__c</field>
                <operation>notEqual</operation>
                <value>Cancelled</value>
            </filterItems>
            <filterItems>
                <field>$Source.Order_Type1__c</field>
                <operation>contains</operation>
                <value>Change of Subscription</value>
            </filterItems>
            <filterItems>
                <field>$Source.isChangeOfSubEntry__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suppress_Vendor_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Vendor Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Stop_Type__c</fullName>
        <label>Temp Stop Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terminating_Reason__c</fullName>
        <label>Terminating Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Package - Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package - Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package - Misc. Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to another pub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - Credit card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - Paypal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Not reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Moving overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Service / Delivery issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Digital / apps issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - No reason given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduction in quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Due_to_Customer__c</fullName>
        <formula>IF( CONTAINS(Order_Type__c, &apos;Start&apos;) , 
IF((Admin_Charge__c + Subscription_Rate__c) &lt; Credit_Balance__c ,
Credit_Balance__c - (Admin_Charge__c + Subscription_Rate__c),
0), 
IF(( Admin_Charge__c + Subscription_Rate__c + Total_Full_Prepaid__c) &lt; Credit_Amount__c ,
Credit_Amount__c - (Admin_Charge__c + Subscription_Rate__c + Total_Full_Prepaid__c), 
0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For recurring subscriptions, the &quot;total due to customer&quot; amount is derived by credit balance less monthly delivery fee. Do ignore the amount shown in this page.</inlineHelpText>
        <label>Total Due to Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Due_to_SPH__c</fullName>
        <formula>IF(CONTAINS(Order_Type__c, &apos;Start&apos;) ,
IF (((Full_Prepaid_Inc_Del_Charge__c + Recurring_Inc_Del_Charge__c + Total_Gift_Charge__c + Admin_Charge__c) - Credit_Balance__c) &lt;= 0,
0,
(Full_Prepaid_Inc_Del_Charge__c + Recurring_Inc_Del_Charge__c + Total_Gift_Charge__c + Admin_Charge__c) - Credit_Balance__c) ,
IF(((Full_Prepaid_Inc_Del_Charge__c + Recurring_Inc_Del_Charge__c + Total_Gift_Charge__c + Admin_Charge__c) - Credit_Amount__c) &lt;= 0,
0,
(Full_Prepaid_Inc_Del_Charge__c + Recurring_Inc_Del_Charge__c + Total_Gift_Charge__c + Admin_Charge__c) - Credit_Amount__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due to SPH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Full_Prepaid_Charge__c</fullName>
        <description>Summation of all the related Subscription Rate where Billing Type is Full Prepaid</description>
        <label>Total Full Prepaid Charge</label>
        <summarizedField>Order_Line_Item__c.Total_Subscription_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Line_Item__c.Main_Package_Billing_Type__c</field>
            <operation>equals</operation>
            <value>Full Prepaid</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Full_Prepaid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Full_Prepaid Inc Del Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gift_Charge__c</fullName>
        <description>Summation of the Total Gift Price of the related Order Line Items</description>
        <label>Total Gift Charge</label>
        <summarizedField>Order_Line_Item__c.Total_Gift_Price__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Line_Item__c</fullName>
        <label>Total Line Item</label>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Postage_Charge__c</fullName>
        <description>Roll up Postage Charges from Order Line Items</description>
        <label>Postage Charge</label>
        <summarizedField>Order_Line_Item__c.Postage_Charge__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Recurring_Charge__c</fullName>
        <description>Summation of all related Subscription Rate on the Order Line Item where Billing Type is Recurring</description>
        <label>Total Monthly Recurring Charge</label>
        <summarizedField>Order_Line_Item__c.Total_Subscription_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Line_Item__c.Main_Package_Billing_Type__c</field>
            <operation>contains</operation>
            <value>Recurring Prepaid, Recurring Postpaid</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Non_Vendor_Line_Item__c</fullName>
        <label>Total Non Vendor Line Item</label>
        <summaryFilterItems>
            <field>Order_Line_Item__c.Delivered_By__c</field>
            <operation>notEqual</operation>
            <value>Vendor</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Balance__c</fullName>
        <label>Total Outstanding Balance</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Postage_Charge__c</fullName>
        <description>Total Postage Charge Roll Up from Line Items</description>
        <label>Total Postage Charge</label>
        <summarizedField>Order_Line_Item__c.Total_Postage_Charge__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <description>Summation of the Qty field on Order Line Item</description>
        <label>Total Quantity</label>
        <summarizedField>Order_Line_Item__c.Qty__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Subscription_Rate__c</fullName>
        <formula>Total_Full_Prepaid_Charge__c  +  Total_Monthly_Recurring_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Subscription Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transient_Indicator__c</fullName>
        <label>Transient Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Unit No</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Date__c</fullName>
        <description>ARMS field</description>
        <label>Update Date</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_ID__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Update ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Time__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Update Time</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgent_Stop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[KCampang 9/18/2014] Created Field for Stop Subscription</description>
        <label>Urgent Stop?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Credit__c</fullName>
        <label>Vendor Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Sms_Remarks__c</fullName>
        <label>Vendor Sms Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zone_Charge__c</fullName>
        <description>Country Zoning Charge. This is use in calculating the Postage Charge. System calculated field.</description>
        <label>Zone Charge</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isChangeOfSubEntry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as lookup filter for Subscription field</description>
        <label>isChangeOfSubEntry?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isOrderLegacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isOrderLegacy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isWaive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isWaive?</label>
        <type>Checkbox</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Recipient_Contact__c</columns>
        <columns>Billing_Contact__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Custom_order</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Recipient_Contact__c</columns>
        <columns>Billing_Contact__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Account_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Custom order</label>
    </listViews>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>Locked_Record</fullName>
        <active>true</active>
        <label>Locked Record</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Amount_Paid</fullName>
        <active>true</active>
        <description>Only accepts positive value</description>
        <errorConditionFormula>AND(
TEXT(Payment_Mode__c) = &apos;Cash&apos;, 
OR(
TEXT(Status__c) = &apos;Draft&apos;, 
TEXT(Status__c) = &apos;Pending&apos;,
 TEXT(Status__c) = &apos;Provisioning&apos;, 
TEXT(Status__c) = &apos;Pending Vendor Assignment&apos;, 
TEXT(Status__c) = &apos;Close&apos;, 
TEXT(Status__c) = &apos;Closed&apos;
), 
IF(
(Total_Due_to_SPH__c - Recurring_Inc_Del_Charge__c) != 0,
OR(
ISBLANK(Amount_Paid__c), 
Amount_Paid__c &lt; (Total_Due_to_SPH__c - Recurring_Inc_Del_Charge__c)
),
false
)
)</errorConditionFormula>
        <errorDisplayField>Amount_Paid__c</errorDisplayField>
        <errorMessage>Amount should be greater than total due amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Account_Required</fullName>
        <active>true</active>
        <description>[KCampang] 08/13/2014. SCR_SubscriptionDetail_VR_7. Required Billing Account.</description>
        <errorConditionFormula>ISNULL( Billing_Account__c) &amp;&amp;   CONTAINS(Account__r.RecordType.Name,&apos;Direct&apos;) &amp;&amp;   ISPICKVAL(Billing_Account_Creation_Mode__c, &apos;Use existing billing account&apos;)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Billing Account is required when Account Record is of type Direct and use existing billing account mode was selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Contact_is_required_for_Invoice</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Billing_Contact__c)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Billing Contact is required when creating Invoice Billing Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CS_Case_Sub_Status</fullName>
        <active>true</active>
        <description>Case Sub status for this subscription must be ready for submission or Urgent Start Approved before the Order can be send to Zuora.</description>
        <errorConditionFormula>AND ( 
	OR( ISPICKVAL(Case_Owner__r.Sub_Status__c, &apos;Ready for Submission&apos;), ISPICKVAL(Case_Owner__r.Sub_Status__c, &apos;Urgent Start Approved&apos;)),  
	NOT( OR( ISPICKVAL(Status__c, &apos;New&apos;), ISPICKVAL(Status__c, &apos;Draft&apos;), ISPICKVAL(Status__c, &apos;Void&apos;) ) ) 
)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Unable to submit to Zuora because case tied is not ready for submission.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Amount</fullName>
        <active>true</active>
        <description>Amount should be greater than zero</description>
        <errorConditionFormula>AND(
TEXT(Payment_Mode__c) = &apos;Check&apos;, 
OR(
TEXT(Status__c) = &apos;Draft&apos;,
TEXT(Status__c) = &apos;Pending&apos;, 
TEXT(Status__c) = &apos;Provisioning&apos;, 
TEXT(Status__c) = &apos;Pending Vendor Assignment&apos;, 
TEXT(Status__c) = &apos;Close&apos;, 
TEXT(Status__c) = &apos;Closed&apos;
), 
IF(
Total_Due_to_SPH__c != 0,
OR(
ISBLANK(Check_Amount__c),
Check_Amount__c &lt; Total_Due_to_SPH__c
),
false
),
ISPICKVAL(Billing_Account_Creation_Mode__c, &apos;Create New Billing Account&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Check_Amount__c</errorDisplayField>
        <errorMessage>Amount must be greater than total amount due.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CostCentreRequired</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Payment_Mode__c, &quot;Other&quot;) &amp;&amp;  ISPICKVAL(Other_Payment_Mode__c, &quot;Internal Charge&quot;) &amp;&amp;  ISBLANK(Cost_Centre__c)</errorConditionFormula>
        <errorMessage>Cost Centre is required when Other Payment Mode is Internal Charge</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Debt_Management_Treatment_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Create_ARMS_Account_Only__c = TRUE &amp;&amp;  ISPICKVAL(Debt_Management_Treatment__c, &apos;NONE&apos;), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Debt_Management_Treatment__c</errorDisplayField>
        <errorMessage>&apos;Debt Mgmt Treatment&apos; field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Debt_Mgmt_Treatment_Bus_Profile_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Create_ARMS_Customer_Account__c = TRUE, ISBLANK(TEXT(Debt_Management_Treatment__c)), ISBLANK(TEXT(Business_Profile__c)))</errorConditionFormula>
        <errorDisplayField>Create_ARMS_Customer_Account__c</errorDisplayField>
        <errorMessage>&apos;Debt Management Treatment&apos; and &apos;Business Profile&apos; fields are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GLCodeRequiredForInternalCharges</fullName>
        <active>true</active>
        <description>If other payment mode is internal charge, GL Code is required.</description>
        <errorConditionFormula>ISPICKVAL(Payment_Mode__c, &quot;Other&quot;) &amp;&amp; ISPICKVAL(Other_Payment_Mode__c, &quot;Internal Charge&quot;) &amp;&amp;
ISPICKVAL(Billing_Account_Creation_Mode__c , &quot;Create New Billing Account&quot;) &amp;&amp;
ISBLANK(GL_Code__c)</errorConditionFormula>
        <errorDisplayField>GL_Code__c</errorDisplayField>
        <errorMessage>Please input GL Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OrderSubEndDate</fullName>
        <active>true</active>
        <description>Order Detail Sub End Date cannot be less than Start Date
2509</description>
        <errorConditionFormula>Subscription_End_Date__c &lt;  Subscription_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Subscription_End_Date__c</errorDisplayField>
        <errorMessage>Subscription End Date must not less than Subscription Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Mode_Validation</fullName>
        <active>false</active>
        <description>Validate user input for the payment information inputted. For Example, For Recurring Postpaid, User can only select Credit Card or Invoice as Payment Mode.</description>
        <errorConditionFormula>AND( ISPICKVAL(Billing_Type__c , &apos;Recurring Postpaid&apos;), NOT(AND( ISPICKVAL(Payment_Mode__c, &apos;Credit Card&apos;), ISPICKVAL(Payment_Mode__c, &apos;Invoice&apos;) ) ) )</errorConditionFormula>
        <errorMessage>Payment Mode is not allowed for selected Payment Method and Payment Mode.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PaypalPaymentModeValidation</fullName>
        <active>true</active>
        <description>New customers/subscriptions cannot avail of PayPal as a Payment Type.</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c , &apos;New&apos;) , ISPICKVAL(Payment_Mode__c , &apos;Paypal&apos;) , ISPICKVAL( Payment_Type__c , &apos;Prepaid&apos;) )</errorConditionFormula>
        <errorDisplayField>Payment_Mode__c</errorDisplayField>
        <errorMessage>New customers/subscriptions cannot avail of PayPal as a Payment Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PostpaidBillingPeriodValidation</fullName>
        <active>true</active>
        <description>New customers/subscriptions will not be able to select this billing period.</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c , &apos;New&apos;) ,  OR(ISPICKVAL(Payment_Mode__c,&apos;Credit Card&apos;),ISPICKVAL(Payment_Mode__c , &apos;Invoice&apos;)),
ISPICKVAL( Payment_Type__c , &apos;Postpaid&apos;) )</errorConditionFormula>
        <errorDisplayField>Payment_Type__c</errorDisplayField>
        <errorMessage>New customers/subscriptions will not be able to select this billing period.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_cannot_be_zero</fullName>
        <active>true</active>
        <description>Quantity cannot be reduce to zero during change of susbscription.</description>
        <errorConditionFormula>AND( New_Quantity__c = 0,  
ISPICKVAL(Category__c, &apos;Subscription Request&apos;))</errorConditionFormula>
        <errorDisplayField>New_Quantity__c</errorDisplayField>
        <errorMessage>Quantity cannot be reduce to zero during change of susbscription.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Billing_Account</fullName>
        <active>false</active>
        <description>Billing Account must be provided if the Account is Direct.</description>
        <errorConditionFormula>(NOT(Account__r.RecordType.DeveloperName = &apos;Direct_Corporate&apos;) || NOT(Account__r.RecordType.DeveloperName = &apos;Direct_Individual&apos;) || NOT(Account__r.RecordType.DeveloperName = &apos;Direct_SPH_Inter_Division&apos;))  &amp;&amp;
ISBLANK(Billing_Account__c)</errorConditionFormula>
        <errorDisplayField>Billing_Account__c</errorDisplayField>
        <errorMessage>Billing Account must be provided the Account is Direct.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Billing_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Billing_Contact__c),  TEXT(Billing_Account_Creation_Mode__c) = &apos;Create New Billing Account&apos;)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Billing Contact is required when creating New Billing Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Delivery_Charge</fullName>
        <active>false</active>
        <description>[KCampang]. 8/13/2014.SCR_SubscriptionDetail_VR_9. Required Subscriber Charge.</description>
        <errorConditionFormula>ISNULL( Delivery_Charge__c) &amp;&amp;
( ISPICKVAL( Delivery_Charge_Type__c , &apos;H&apos;) ||
 ISPICKVAL( Delivery_Charge_Type__c , &apos;C&apos;) ||
 ISPICKVAL( Delivery_Charge_Type__c , &apos;L&apos;) ||
 ISPICKVAL( Delivery_Charge_Type__c , &apos;S&apos;) ||
 ISPICKVAL( Delivery_Charge_Type__c , &apos;9&apos;))</errorConditionFormula>
        <errorDisplayField>Delivery_Charge__c</errorDisplayField>
        <errorMessage>Delivery Charge is required when the selected delivery charge type is among the following: H, C, L, S, or 9.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Informed</fullName>
        <active>false</active>
        <description>Requires user to check Informed checkbox
[KCampang] 08/11/2014. Updated error condition with record type considerations.

[JohnD 10/29] Copied updated condition from DV1.</description>
        <errorConditionFormula>Account__r.RecordType.Name = &apos;Vendor Subscriber&apos;
&amp;&amp;
Informed_Customer__c = FALSE &amp;&amp; NOT(ISPICKVAL(Sub_Category__c,&apos;Stop Subscription&apos;))</errorConditionFormula>
        <errorDisplayField>Informed_Customer__c</errorDisplayField>
        <errorMessage>Have you informed vendor?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Reason</fullName>
        <active>true</active>
        <description>Requires user to select a reason
[KCampang] 8/11/2014. Added a record type condition.</description>
        <errorConditionFormula>Account__r.RecordType.Name = &apos;Vendor Subscriber&apos;
&amp;&amp;(ISNULL(TEXT( Reason__c )))</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Reason must be provided when the Account is a Vendor Subscriber.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Subscriber_Contact</fullName>
        <active>true</active>
        <description>[KCampang] 08/15/2014.  Subscriber Contact required for direct if option selected is ‘Create new billing Account’</description>
        <errorConditionFormula>CONTAINS(Account__r.RecordType.Name, &apos;Direct&apos;) &amp;&amp;  ISPICKVAL( Billing_Account_Creation_Mode__c , &apos;Create New Billing Account&apos;) &amp;&amp;   ISNULL(Billing_Contact__c)</errorConditionFormula>
        <errorDisplayField>Billing_Contact__c</errorDisplayField>
        <errorMessage>Subscriber/Billing Contact is required if account is Direct and selected Creation Mode was &quot;Create New Billing Account&quot;.</errorMessage>
    </validationRules>
</CustomObject>